[package]
name = "tunneler"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
structopt = "0.3.21"
tokio = { version = "1.16.0", features = ["rt", "net", "rt-multi-thread", "io-util", "time", "sync", "macros"] }
num_cpus = "1.13.0"
dashmap = { version = "5.1" }
dirs = { version = "3.0.1" }
chrono = { version = "0.4.19" }
fnv= { version = "1.0.7" }
base64 = { version = "0.13.0" }
rand = { version = "0.7.0", features = ["getrandom"] }
async-trait = "0.1.42"

tunneler-core = { version = "0.13.0" }

[profile.release]
lto = true
codegen-units = 1
